--- a/Changes
+++ b/Changes
@@ -1,11 +1,40 @@
 Revision history for Perl extension Module::Build.
 
+0.13
+
+  - 'cleanup' file lists are now written immediately, rather than at
+    program termination.  This helps avoid "phantom files" that don't
+    get handled by the 'realclean' action.  The internal
+    write_cleanup() method (which was never documented) is now gone.
+
+  - The 'blib/' directory is now properly cleaned up in more (all?)
+    circumstances.  Previously it could become a phantom if
+    create_build_script() was never called.
+
+  - Now scan the 'c_source' directory for .cpp (C++) files as well as
+    .c files, and compiles them.
+
+  - Use a 'phony' target for 'make manifest' in the pass-through
+    Makefile, for the same reason as 'make install' (see version 0.12
+    notes below).
+
+  - Module::Build::Compat now accepts any known Config.pm key and
+    passes it through to the Build.PL.  Fixes a problem with CPANPLUS,
+    which was passing INSTALLMAN1DIR.
+
+  - The file 'META.yaml' has been re-named to 'META.yml' in order to
+    cooperate better with systems that can only handle 3 characters
+    after the dot.
+
+  - The t/xs.t test should give more informative error messages upon
+    failure.
+
 0.12  Thu Nov 14 18:31:47 AEST 2002
 
   - The META.yaml file was erroneously looking for 'build_depends'
     instead of 'build_requires'. [spotted by Iain Truskett]
 
-  - Add prompt() and yorn() methods for use in Build.PLs
+  - Add prompt() and y_n() methods for use in Build.PLs
 
   - Do more to work with all versions of Test::Harness when setting
     the TEST_VERBOSE flag and running under the debugger [patch by
