Import of KWILLIAMS/Module-Build-0.18_04 from CPAN.
gitpan-cpan-distribution: Module-Build
gitpan-cpan-version:      0.18_04
gitpan-cpan-path:         KWILLIAMS/Module-Build-0.18_04.tar.gz
gitpan-cpan-author:       KWILLIAMS
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,12 +1,9 @@
 Revision history for Perl extension Module::Build.
 
-0.19 TODO:
+0.19
 
- - Add tests for verifying signatures as well as creating them.  Skip
-   signature tests if we're testing noninteractively, or if the user's
-   gpg setup isn't right, etc.
- 
- - Get the 'install_base' parameter working as documented.
+ - Got the 'install_base' parameter working as documented.  Provides
+   an easy way to install to local or alternative directory trees.
 
 0.18_03
 
@@ -42,7 +39,7 @@ Revision history for Perl extension Module::Build.
  - Moved INSTALL to INSTALL.txt to increase compatibility with various
    odd versions of 'make' during 'make install' on case-insensitive
    filesystems (like nmake on Win32, often).  Only affects the
-   Makefile compatibility layer.  [reported by Andrew Savage]
+   Makefile compatibility layer.  [reported by Andrew Savige]
 
  - Module::Build->known_actions() now works as a class method.
 
@@ -52,7 +49,7 @@ Revision history for Perl extension Module::Build.
  - Pass-through makefiles now list each action individually rather
    than using a ".DEFAULT" catch-all.  This improves compatibility
    with 'nmake' on Win32, and probably some other less common 'make'
-   dialects.  [Andrew Savage]
+   dialects.  [Andrew Savige]
 
  - We're now more aggressive about testing the pass-through makefiles,
    e.g. making sure they can run 'all' and 'test' targets, and making
@@ -153,7 +150,7 @@ Revision history for Perl extension Module::Build.
    [reported by Teun Burgers]
 
  - Fixed some failing test code on Windows - open files can't be
-   deleted. [Andrew Savage]
+   deleted. [Andrew Savige]
 
  - The Cygwin platform is now treated as a flavor of Unix rather than
    a flavor of Windows. [chocolateboy]
