--- a/Changes
+++ b/Changes
@@ -1,5 +1,27 @@
 Revision history for Perl extension Module::Build.
 
+0.19_04
+
+ - Fixed yet another bug with installation directories, in which the
+   'install_base' parameter wasn't being respected on the command
+   line.  [Spotted by Jonathan Swartz]
+
+ - Now we don't build man pages when there's nowhere to install them,
+   such as on some Win32 or most Mac systems.
+
+ - Improved comparisons of version strings containing underscore
+   characters (indicating "beta" status). [Steve Purkis]
+
+ - Added documentation for the 'dist_author', 'dist_abstract', and
+   'codebase' parameters to new(), and for the 'ppd' action. [Dave
+   Rolsky]
+
+ - Added documentation for the up_to_date() and contains_pod()
+   methods. [Dave Rolsky]
+
+ - 'traditional' pass-through Makefile.PLs will now contain an
+   INSTALLDIRS parameter matching the Build.PL's.
+
 0.19_03
 
  - Added a notes() feature, which helps share data transparently
@@ -9,7 +31,7 @@ Revision history for Perl extension Module::Build.
 
  - The installation process will now create man(1) and man(3) pages
    from POD in modules & scripts, and install them. [large patch by
-   Steve Purkis]
+   Steve Purkis, 5.005 fix by Mathieu Arnold]
 
  - version_from_file() now ignores $VERSION variables that are defined
    in POD or comments.  It can still be tricked by $VERSIONs in string
