--- a/Changes
+++ b/Changes
@@ -1,5 +1,30 @@
 Revision history for Perl extension Module::Build.
 
+0.20_02  Mon Sep 15 10:26:24 CDT 2003
+
+ - Fixed a problem with signatures that occurred if 'distsign' was
+   called before 'distdir' - the signature would be generated twice.
+
+ - Added a 'create_readme' parameter to new(), which will use
+   Pod::Text to generate a README from the main (dist_version_from)
+   module file during the 'distdir' action.
+
+ - We now refuse to run the 'Build' script if it was created using a
+   different version of Module::Build.  This has caused a couple of
+   nasty bugs in the past, I don't want to know what it would cause in
+   the future.
+
+ - Documentation for do_system() has been added. [Dave Rolsky]
+
+ - run_perl_script() is now available as a class method, though it
+   will need to (re-)find the perl interpreter in this case.
+
+ - Added a new_from_context() method that authors of automated tools
+   like CPANPLUS and CPAN can use instead of running all tasks as
+   sub-processes.  We also use it in the regression tests for
+   Module::Build itself.  ** Note that this method is currently
+   undocumented because its name may change before version 0.21. **
+
 0.20_01  Mon Sep  8 21:25:39 CDT 2003
 
  - When signing distributions with Module::Signature, we now
